--- a/views/_layout.jade
+++ b/views/_layout.jade
@@ -29,29 +29,29 @@ html(class="no-js")
 		<!-- build:js(.) scripts/vendor.js -->
 		<!-- bower:js -->
 		script(src="bower_components/jquery/dist/jquery.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js")
-		script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/affix.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/alert.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/button.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/carousel.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/collapse.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/dropdown.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tab.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/transition.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/scrollspy.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/modal.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/tooltip.js")
+		//- script(src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap/popover.js")
 		<!-- endbower -->
 		<!-- endbuild -->
 
 		<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-		script(type='text/javascript').
-			(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-			function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-			e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-			e.src='//www.google-analytics.com/analytics.js';
-			r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-			ga('create','UA-XXXXX-X');ga('send','pageview')
+		//- script(type='text/javascript').
+		//- 	(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+		//- 	function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+		//- 	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+		//- 	e.src='//www.google-analytics.com/analytics.js';
+		//- 	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+		//- 	ga('create','UA-XXXXX-X');ga('send','pageview')
 
 		<!-- build:js({app,.tmp}) scripts/main.js -->
 		script(src="scripts/main.js")
