description in the page

--- a/views/index.jade
+++ b/views/index.jade
@@ -27,13 +27,17 @@ block content
 				h4 Sass
 				p Sass is a mature, stable, and powerful professional grade CSS extension language.
 
-
 				h4 Bootstrap
 				p Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.
 
 				h4 Modernizr
 				p Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.
 
+				h4 Jade
+				p Jade is a robust, elegant, feature rich template engine for nodejs
+
+				p To start you can erase all this content and modify the main.scss file in the CUSTOM CSS section.
+				
 		.footer
 			p
 				span.glyphicon.glyphicon-heart 
